crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@app__add.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/add.panda
---
Ok(
    Int(
        Int {
            n: 5,
        },
    ),
)
