crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@app__add_one.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/add_one.panda
---
Ok(
    Int(
        Int {
            n: 4,
        },
    ),
)
