crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@app__id.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/app/id.panda
---
Ok(
    Int(
        Int {
            n: 3,
        },
    ),
)
